Version - 2.2 -
-

Version - 2.1 - 08-15-14
-Changes to bin_timePaleoPhy and bin_cal3TimePaleoPhy so taxa not included in the tree are dropped before random dates are drawn from those intervals, which increases computational efficiency.
-New function perfectCharTree, for obtaining matrices of simulated parsimony informative characters on a topology
-New function seqTimeList, which randomly searches a given timeList object with overlapping intervals for solutions which have fully sequential intervals
-Added error message to timePaleoPhy to report an error if 'type' argument is not one of the listed options
-Fixed error in sampleRanges when handed data with a single instantaneous taxon
-Added option to return all sampling events in $ranges for simPaleoTrees
-Modified bin_timePaleoPhy and bin_cal3TimePaleoPhy so that the $ranges.used arguments name the columns "FAD" and "LAD" respectively for ease of use with geoscalePhylo in package strap
-Small modifications to how plotting worked in freqRat, changed calculations to work on proportions and not absolute frequencies, made it so that a warning is issued if a freqRat over 1 is calculated.
-Clarifications to help file and warning statements regarding use of 'zlba' and 'aba' time-scaling methods (thanks Graeme Lloyd!)
-Added calcExtinction argument to freqRat to give capability to get extinction rate from slope of log frequencies

Version - 2.0 - 02-03-14
-Changed parInit to use uniform distribution to randomly draw initial parameter values between bounds, rather than take mid value between bounds
-Changed how time-scaling functions dealt with node.mins argument; can no longer use node.mins with a dataset that has unshared taxa that are to be dropped
-Altered example for use of node.mins in help files for time-scaling functions; thanks John Clarke of Oxford for the heads up! Also other modifications were made to the help descriptions, clarifying that node.mins can be used to constrain the minimum age for the root node.