@@ -1,5 +1,6 @@
 Version - 2.2 -
--
+-Added a new time-scaling method to timePaleoPhy, "equal2" which is otherwise identical to "equal" but replicates the old branch-ordering routine used for 'equal' prior to version 2.0
+-Fixed bug in simPaleoTrees when ranges.only=FALSE, modified examples to catch error in the future
 
 Version - 2.1 - 08-15-14
 -Changes to bin_timePaleoPhy and bin_cal3TimePaleoPhy so taxa not included in the tree are dropped before random dates are drawn from those intervals, which increases computational efficiency.
